add_subdirectory(fc)
add_subdirectory(schema)
add_subdirectory(chainbase)
add_subdirectory(version)
add_subdirectory(chain)
add_subdirectory(protocol)
add_subdirectory(network)
add_subdirectory(utilities)
add_subdirectory(application)
add_subdirectory(plugins)
add_subdirectory(wallet)
add_subdirectory(manifest)
